# toribash_re

./: .gitattributes  .gitignore  .gitmodules  .init_ipython.py  CMakeLists.txt  Makefile  README.md  requirements.lock.txt  requirements.txt
doc/: CMakeLists.txt  ml-paper.ltx  paper.ltx  r2con-2018-slides.ltx
python/: _statistics.py  toribash_rarun.py
python/ddpg/: __init__.py  ddpg.py  experiment.py  keras_rl_experiment.py  toribash_env.py
res/: distance_vs_score.svgz  frames_score_plot_replay_3240408618_1514899741.svgz  helper_24_max_diff_bufm1ve2.svgz  helper_24_max_minus_min_fgmnb2t2.svgz  helper_24_max_w3ppd3um.svgz  helper_24_mean_b3ao65da.svgz  helper_24_min_e2nhy1hi.svgz  large_files.sha256.txt  memory-1280000.hdf5.xz.sha256  r2con-2018-detailed-asciinema.cast  toribash.tar.sha256  toribash.tar.xz.sha256
res/log1/: ddpg.log.txt  log1.rpl
res/log2/: ddpg.log.txt
res/log3/: ddpg.log.txt
scripts/: toribash.lua
src/: _statistics.py  lua.cpp  repair.sh  statistics.py  toribash.lua  toribash.rr2  toribash_rarun.py  toribash_rarun.sh
src/ddpg/: CMakeLists.txt  ddpg-test.cpp  ddpg.cpp  ddpg.hpp  env.py
src/experiments/: c_constructs.c  cpp_constructs.cpp
src/mylib/: inject.cpp  inject.hpp  l_dir.c
src/patch_toribash/: CMakeLists.txt  environment.cpp  environment.hpp  steam_api.cpp  steam_api.h
